# backend/types/user-controller-types.ts
@@ -8,6 +8,7 @@ export interface IUserCreateRequest {
   phone?: string;
   role?: IUserAttributes['roles'];
   status?: IUserAttributes['status'];
+  verified?: IUserAttributes['verified'];
   profileImage?: string;
 }
 
